--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -1,20 +1,26 @@
 {
     "key": {
-        "name": "Daniel",
-        "path": "/Users/xiangzhuolun/.ssh/aws"
+        "name": "dcz",
+        "path": "/home/yucz/.ssh/id_rsa"
     },
     "ports": {
+        "smvba": 9000,
         "consensus": 8000,
         "mempool": 7000,
         "front": 6000
     },
     "repo": {
-        "name": "hotstuff",
-        "url": "https://github.com/danielxiangzl/hotstuff.git",
+        "name": "parbft-parbft2-rust",
+        "url": "https://github.com/ac-dcz/parbft-parbft2-rust",
         "branch": "main"
     },
     "instances": {
-        "type": "m5d.8xlarge",
-        "regions": ["us-east-1", "eu-north-1", "ap-northeast-1", "ap-southeast-2", "us-west-1"]
+        "type": "m5d.2xlarge",
+        "regions": [
+            "us-east-1",
+            "eu-north-1",
+            "ap-northeast-1",
+            "ap-southeast-2"
+        ]
     }
 }
