--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -12,7 +12,7 @@
     "repo": {
         "name": "parbft-parbft2-rust",
         "url": "https://github.com/ac-dcz/parbft-parbft2-rust",
-        "branch": "main"
+        "branch": "master"
     },
     "instances": {
         "type": "m5d.2xlarge",
