--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -11,7 +11,7 @@
     },
     "repo": {
         "name": "parbft-parbft2-rust",
-        "url": "https://github.com/ac-dcz/parbft-parbft2-rust",
+        "url": "https://github.com/",
         "branch": "master"
     },
     "instances": {
