--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -1,7 +1,7 @@
 {
     "key": {
-        "name": "dcz",
-        "path": "/home/yucz/.ssh/id_rsa"
+        "name": "DGJG",
+        "path": "/Users/dgjg/.ssh/aws"
     },
     "ports": {
         "smvba": 9000,
@@ -10,17 +10,17 @@
         "front": 6000
     },
     "repo": {
-        "name": "parbft-parbft2-rust",
-        "url": "https://github.com/",
-        "branch": "master"
+        "name": "hotstuff-DAG-4",
+        "url": "https://github.com/DGJGzy/hotstuff-DAG-4.git",
+        "branch": "main"
     },
     "instances": {
         "type": "m5d.xlarge",
         "regions": [
-            "us-east-2",
+            "us-east-1",
+            "ap-southeast-2",
             "eu-north-1",
-            "ap-northeast-1",
-            "ap-southeast-2"
+            "ap-northeast-1"
         ]
     }
 }
