--- a/benchmark/settings.json
+++ b/benchmark/settings.json
@@ -20,7 +20,8 @@
             "us-east-1",
             "us-west-1",
             "ap-southeast-2",
-            "eu-north-1"
+            "eu-north-1",
+            "ap-northeast-1"
         ]
     }
 }
